syntax = "proto3";

package auth;
option go_package = "./protos;authproto";

message SignUpRequest {
	string email = 1;
	string username = 2;
	string password = 3;
}

message LoginRequest {
	string email = 1;
	string password = 2;
}

message LoginResponse {
	string email = 1;
	string token = 2;
}

service AuthService {
	rpc CreateAccount(SignUpRequest) returns (LoginResponse) {};
	rpc Login(LoginRequest) returns (LoginResponse) {};
}